--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -104,9 +104,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
 }
 .edit-name__row {
+  display: flex;
   flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+.edit-name input {
+  padding: 0.5rem;
 }
 
 .main-nav {
