--- a/client/src/styles/pages/_user.scss
+++ b/client/src/styles/pages/_user.scss
@@ -8,7 +8,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 1rem;
     &__row {
+        display: flex;
         flex-direction: row;
+        align-items: center;
+        gap: 0.5rem;
+    }
+    input {
+        padding: 0.5rem;
     }
 }
