--- a/client/src/styles/components/_accountItem.scss
+++ b/client/src/styles/components/_accountItem.scss
@@ -2,15 +2,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: column;
     border: 1px solid black;
     background-color: #fff;
     width: 80%;
     margin: 0 auto;
-    flex-direction: column;
     padding: 1.5rem;
     box-sizing: border-box;
     text-align: left;
     margin-bottom: 2rem;
+}
+.account-card-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 1rem;
 }
 
 .account-amount {
@@ -35,8 +42,18 @@
     flex: 1;
 }
 
+.transactions {
+    width: 80%;
+    thead{
+        tr{
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+}
+
 @media (min-width: 720px) {
-    .account {
+    .account-card-header {
         flex-direction: row;
     }
 
