client: accountItem transactions css table to grid

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -255,11 +255,24 @@
 }
 
 .transactions {
-  width: 80%;
+  width: 100%;
 }
-.transactions thead tr {
-  display: flex;
-  justify-content: space-between;
+
+.transactions-header {
+  padding-left: 1rem;
+}
+
+.transaction {
+  background-color: #00bc77;
+  color: #fff;
+  width: 100%;
+  padding-left: 1rem;
+}
+
+.grid-template {
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 0.5fr 0.5fr;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 720px) {
