--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -261,18 +261,41 @@
 .transactions-header {
   padding-left: 1rem;
 }
+.transactions-header p {
+  padding-left: 0.5rem;
+}
 
 .transaction {
   background-color: #00bc77;
   color: #fff;
   width: 100%;
   padding-left: 1rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
 }
 
 .grid-template {
   display: grid;
-  grid-template-columns: 0.5fr 2fr 0.5fr 0.5fr;
+  grid-template-columns: 1fr 2fr 1fr 1fr 0.5fr;
   margin-bottom: 1rem;
+}
+
+.transaction-open-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  color: #fff;
+  background-color: #00bc77;
+  border: none;
+  cursor: pointer;
+}
+
+.transaction-icon {
+  color: #fff;
+  background-color: #00bc77;
+  border: none;
+  cursor: pointer;
 }
 
 @media (min-width: 720px) {
