--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import './components/featureItem';
 @import './components/button';
 @import './components/accountItem';
+@import './components/transactionItem';
 
 html {
     font-family: Avenir, Helvetica, Arial, sans-serif;
@@ -48,4 +49,16 @@ body {
     width: 1px !important;
     white-space: nowrap !important;
     /* 3 */
+}
+
+.grid-template {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr 1fr 0.5fr;
+    margin-bottom: 1rem;
+}
+.active {
+    display: block;
+}
+.inactive {
+    display: none;
 }
