--- a/client/src/styles/components/_transactionItem.scss
+++ b/client/src/styles/components/_transactionItem.scss
@@ -13,6 +13,12 @@
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
+    &__message{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
 }
 
 
