client: display transaction operation type (income / expense) on TransactionItem

--- a/client/src/styles/components/_transactionItem.scss
+++ b/client/src/styles/components/_transactionItem.scss
@@ -19,6 +19,9 @@
         font-size: 1.5rem;
         font-weight: bold;
     }
+    &__amount::first-letter{
+        font-size: 1.2rem;
+    }
 }
 
 
